--- a/menu.html
+++ b/menu.html
@@ -13,19 +13,20 @@
          <div class="dropmenu">
             <svg class="menu icon" height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
             <ol class="dropdown">
-               <a href="menu.html"><li>Menu</li></a>
-               <a href="booking.html"><li>Book Table</li></a>
-               <a href="basket.html"><li>Orders</li></a>
-               <a href="#"><li>Account</li></a>
+               <li><a class="blocklink" href="index.html">Home</a></li>
+               <li><a class="blocklink" href="menu.html">Menu</a></li>
+               <li><a class="blocklink" href="booking.html">Book Table</a></li>
+               <li><a class="blocklink" href="basket.html">Orders</a></li>
+               <li><a class="blocklink" href="account.html">Account</a></li>
             </ol>
          </div>         <div></div>
          <a href="index.html"><img class="logo" src="images/icons/logo-col.svg" alt="Logo"/></a>
-         <a href="basket.html"><svg class="basket icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-               viewBox="0 0 243.3 211" style="enable-background:new 0 0 243.3 211;" xml:space="preserve"> <g id="Layer_2_1_"> <g id="Layer_1-2"> <path class="st0" d="M214.7,0.1L214.7,0.1L203.3,0v0.1h-11.1V0h-10.8v0.1h-10.8c0,0,0,0,0-0.1h-10.4v0.1h-23.7c0,0,0,0,0-0.1H126
+         <a href="basket.html"><svg class="basket icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+               viewBox="0 0 243.3 211" style="enable-background:new 0 0 243.3 211;" xml:space="preserve"> <path class="st0" d="M214.7,0.1L214.7,0.1L203.3,0v0.1h-11.1V0h-10.8v0.1h-10.8c0,0,0,0,0-0.1h-10.4v0.1h-23.7c0,0,0,0,0-0.1H126
                   v0.1h-10.8V0h-10.8v0.1H93.3V0H81.8v0.1H66.6c0,0,0,0,0-0.1H56.2v0.1H45.3V0H34.5v0.1H15.9L0,65.8L27.9,78l22.2,133h143.8 l22.3-133.4l27.2-11.9l-16-65.7H214.7z M181,191.6H63l-3.7-21.4h125.3L181,191.6z M193,117.8H51l-9.3-53.5
                   C59,86,88.5,100.2,122,100.2s63-14.2,80.3-35.8L193,117.8z M122,81.7c-44.1,0-80.4-27.2-85.1-62.3h170.2 C202.4,54.5,166.1,81.7,122,81.7L122,81.7z"/>
-               </g> </g> </svg></a>
-         <a href="#"><svg class="account icon" height="20px" version="1.1" viewBox="0 0 20 20" width="20px" xmlns="http://www.w3.org/2000/svg" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1"><g id="Core" transform="translate(-86.000000, -2.000000)"><g id="account-circle" transform="translate(86.000000, 2.000000)"><path d="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,3 C11.7,3 13,4.3 13,6 C13,7.7 11.7,9 10,9 C8.3,9 7,7.7 7,6 C7,4.3 8.3,3 10,3 L10,3 Z M10,17.2 C7.5,17.2 5.3,15.9 4,14 C4,12 8,10.9 10,10.9 C12,10.9 16,12 16,14 C14.7,15.9 12.5,17.2 10,17.2 L10,17.2 Z" id="Shape"/></g></g></g></svg></a>
+                 </svg></a>
+         <a href="account.html"><svg class="account icon" height="20px" version="1.1" viewBox="0 0 20 20" width="20px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title/><desc/><defs/><g fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1"><g id="Core" transform="translate(-86.000000, -2.000000)"><g id="account-circle" transform="translate(86.000000, 2.000000)"><path d="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,3 C11.7,3 13,4.3 13,6 C13,7.7 11.7,9 10,9 C8.3,9 7,7.7 7,6 C7,4.3 8.3,3 10,3 L10,3 Z M10,17.2 C7.5,17.2 5.3,15.9 4,14 C4,12 8,10.9 10,10.9 C12,10.9 16,12 16,14 C14.7,15.9 12.5,17.2 10,17.2 L10,17.2 Z" id="Shape"/></g></g></g></svg></a>
       </nav>
 
       <main class="main">
@@ -43,13 +44,13 @@
                <li><a href="#sides"><h2>Sides</h2></a></li>
             </ol>
          </nav>
-         </hr>
+         <hr>
          <section class="food-section">
             <div class="food wrapper">
                <h2 id="starters" class="title">Starters</h2>
                <section class="starters">
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -61,7 +62,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -73,7 +74,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -91,7 +92,7 @@
                <h2 id="mains" class="title">Mains</h2>
                <section class="mains">
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -103,7 +104,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -115,7 +116,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -127,7 +128,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -139,7 +140,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -151,7 +152,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -163,7 +164,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -175,7 +176,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -191,7 +192,7 @@
                <h2 id="sides" class="title">Sides</h2>
                <section  class="sides"> 
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -203,7 +204,7 @@
                      <button class="add">+</button>
                   </div>
                   <div class="mealcard">
-                     <svg class="like" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     <svg class="like" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve"><g><path class="st0" d="M12,21.6L12,21.6C9.4,21.6,2,14.9,2,8.5c0-3.1,2.5-5.8,5.4-5.8c2.3,0,3.8,1.6,4.6,2.7c0.8-1.1,2.4-2.7,4.6-2.7
                               c2.9,0,5.4,2.7,5.4,5.8C22,14.9,14.6,21.6,12,21.6L12,21.6L12,21.6z M7.4,4.2c-2.1,0-3.9,2-3.9,4.3c0,5.7,7,11.6,8.6,11.7
                               c1.5-0.1,8.6-5.9,8.6-11.7c0-2.3-1.8-4.3-3.9-4.3c-2.5,0-3.9,2.9-4,3c-0.2,0.6-1.2,0.6-1.4,0C11.3,7.2,9.9,4.2,7.4,4.2L7.4,4.2z"/></g></svg>
@@ -219,6 +220,8 @@
          </section>
          <div class="bottom-button">
             <a href="booking.html"><div class="button book-table">Book a table</div></a>
+            <a href="basket.html"><div class="button basket-button">View basket</div></a>
+
          </div>
       </section>     
       </main>
